force-app/main/default/objects/Marketing_Spend__c/Marketing_Spend__c.object-meta.xml
<CustomObject>
    <description>Marketing spend per source/period. The input that makes cost-per-lead and cost-per-signed-case possible (US71-1). Enter manually or via CSV import.</description>
    <label>Marketing Spend</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Spend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Spend</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>