force-app/main/default/objects/Marketing_Spend__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Optional campaign label.</description>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>