force-app/main/default/objects/Marketing_Spend__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End of the spend period.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>