force-app/main/default/objects/Marketing_Spend__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start of the spend period.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>