force-app/main/default/objects/Marketing_Spend__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Must match the Intake Source value this spend is attributed to.</description>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>